data/all_generated_tests/raw_wast_tests/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2004.wast
;; 5. **Test Description**:    - **Scenario**: Call an imported function with nested `block` structures where a `br_if` in the innermost block should branch to the outermost block.    - **Constraint**: Validate proper nesting and label resolution, ensuring that operand stack states are consistent.    - **Differential Focus**: Evaluate if the explicit handling of label arguments in the wizard_engine appropriately respects block nesting depths across module imports.

(assert_invalid
 (module
  (import "env" "external_func" (func $external_func))
  (func $test_func
   (block (result i32)
    (block (result i32)
     (call $external_func)
     (br_if 1 (i32.const 1))
    )
    (i32.const 0)
   )
  )
 )
 "type mismatch"
)